--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,16 @@
             ".vscode/**",
             "**/*.scss",
             "**/*.sass"
-    ]
+    ],
+    "configurations": [
+    {
+        "name": "Launch Chrome",
+        "request": "launch",
+        "type": "pwa-chrome",
+        "url": "http://localhost:5500",
+        "webRoot": "${workspaceFolder}"
+    }
+    ],
+ 
 
 }
